# ExpectationMaximization

./: .gitmodules  CMakeLists.txt  Example.cxx  ExpectationMaximization.cpp  ExpectationMaximization.h  ExpectationMaximizationExample.cpp  ExpectationMaximizationExample1D.cpp  Gaussian1D.cpp  Gaussian1D.cxx  Gaussian1D.h  GaussianModel.cpp  GaussianModel.h  GaussianND.cpp  GaussianND.cxx  GaussianND.h  MixtureModel.h  Model.cpp  Model.cxx  Model.h  Plotting.cxx  Plotting.h  README.md  vtkExpectationMaximization.cxx  vtkExpectationMaximization.h
Testing/: CMakeLists.txt  ExpectationMaximization1DTest.cpp  ExpectationMaximization2DTest.cpp  ExpectationMaximizationNDTest.cpp
